# CE4015_simulation

./: .gitignore  Cargo.toml  README.md
analysis/: .gitignore  analysis.ipynb  input_analysis.ipynb  output_analysis.ipynb  simulator_perf_a_r0_r100000_e10000.csv  simulator_perf_a_r1_r100000_e10000.csv
assignments/: T7Q3.ipynb  T7Q3.typ  assignment_1.typ  assignment_1a.typ  assignment_1b.bib  assignment_1b.typ  assignment_2.typ
assignments/media/: proc_base-station.excalidraw
crates/sim/: Cargo.toml
crates/sim/src/: main.rs  traits.rs
crates/simlib/: Cargo.toml
crates/simulator/: Cargo.toml
crates/simulator/src/: args.rs  base_station.rs  event.rs  generator.rs  logic.rs  main.rs  traits.rs
crates/simulator_core/: Cargo.toml
crates/simulator_core/src/: lib.rs  traits.rs
